# DistributedVerificationPlatform

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  __init__.py  check_db.py  docker-compose.portable.yml  docker-compose.yml  export-images.bat  export-images.sh  fix_db.py  setup.ps1  setup.sh  test_all_endpoints.py  test_api.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backend/: .dockerignore  Dockerfile  _test_run.py  cli.py  fix_stale.py  pyproject.toml  requirements.txt
backend/app/: auth.py  db.py  main.py  models.py  schemas.py
backend/app/api/: routes.py
backend/app/services/: __init__.py  notifications.py  purge.py  queue.py  report_generator.py  runner.py
backend/tests/: __init__.py  sample_test.py  test_api_quick.py  test_data_quick.py  test_dummy1.py  test_dummy2.py  test_dummy3.py  test_dummy4.py  test_security_quick.py
backend/tests/integration/: test_api_integration.py
backend/tests/regression/: conftest.py  test_admin_cli.py  test_cancel.py  test_clients.py  test_discovery.py  test_metrics.py  test_purge.py  test_reports.py  test_resources.py  test_runner_cancel.py  test_runs.py  test_security.py
backend/tests/smoke/: test_basic_smoke.py
backend/tests/unit/: test_math_ops.py  test_string_ops.py
certs/: cert.pem  key.pem
docs/: ARCHITECTURE.md  README.md  REQUIREMENTS.md  USER_GUIDE.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
k8s/: backend-deployment.yaml  (+5 more)
(+96 files in other folders)
